# mag-lab-data-toolkit

./: README.md  pyproject.toml
deploy-matlab/build-scripts/: build-base-matlab-runtime.sh  build-docker-executable.sh  build-executable.sh  matlab-compiler-image-build.sh  run-matlab-in-container.sh
deploy-matlab/docker-builds/base-matlab-runtime/: Dockerfile
deploy-matlab/docker-builds/deploy-executable/: Dockerfile-on-runtime-base
deploy-matlab/example-code/matlab/: exampleFunction.m
deploy-matlab/example-code/python/: executable-example.py
docs/: MATLAB.md
examples/: calibrations.json
src/: CDFLoader.py  CalibrationWrapper.py  MatlabWrapper.py  calibrationFormat.py  calibrationFormatProcessor.py  main.py
src/calibration/: Calibrator.py  MatlabWrapper.py  calibrationFormat.py  calibrationFormatProcessor.py
tests/: test_calibration_format.py
tests/example/: calibrations.json
