[tool.poetry]
name = "mag-lab-data-toolkit"
version = "0.1.0"
description = ""
authors = ["mhairifin <m.finlayson@imperial.ac.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pydantic = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
